discussion/kv_engine/147944/147944_rev23_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor]: Use folly::AsyncServerSocket for ServerSockets

Replace the old ServerSocket class with a new implementaion
which utilize folly::AsyncServerSocket

Change-Id: I520defc1deb345cb3c0fb3980e406f4781e34b32

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-14 11:41:18.000000000
Message: 
Uploaded patch set 23.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 12:32:33.000000000
Message: 
Patch Set 23: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36851/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [0034/0157]: test access scanner settings.....\kv_engine\engines\ep\tests\ep_testsuite.cc:3351 Test failed: `" (Expected `0", got `-1" - Initial time incorrect, expect: 02:00, actual: 01:59)
(167 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36851/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11859/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19448/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19448/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9862/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9862/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9862/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11434/ : FAILURE

Failure of GoogleTest "ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting":

<pre>
[ RUN      ] ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting
[2021-06-14T12:22:18.702Z] unknown file: Failure
[2021-06-14T12:22:18.702Z] C++ exception with description "CouchKVStore::initialize: openDB error:no such file, file_name:./test/2.couch.0" thrown in SetUp().
[2021-06-14T12:22:18.702Z] [  FAILED  ] ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting, where TypeParam = TestExecutorPool (1 ms)
ExecutorPoolEpEngineTest/0.TaskStats_MemAccounting
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11434/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8451/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/373/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31486/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10514/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11586/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
